# EXTENDED_AVELLANEDA_MARKET_MAKING_RUST

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  DEEP_REVIEW_FINDINGS.md  Dockerfile  LICENSE  README.md  backup_project.py  config.json  deploy.py  docker-compose.yml  k_estimator.txt  kill_process.sh  requirements.txt  restart_bot.sh  test_volatility_sigma_estimators.txt
.claude/: settings.local.json
DOC/: full_doc.txt
examples/: basic_usage.rs  collect_data.rs  limit_maker_bot.rs  public_trades.rs  spread_analysis.rs  test_garch_volatility.rs  test_k_estimator.rs  test_parser.rs  test_virtual_quoting.rs  trade_history.rs  ws_latency_test.rs
python/arch-main/: .coveragerc  .flake8  README.md  codecov.yml  meson.build
python/arch-main/doc/source/: names_wordlist.txt  spelling_wordlist.txt  types.rst
python/arch-main/doc/source/changes/: 6.0.rst  7.0.rst  8.0.rst
scripts/: garch_forecast.py
scripts/scripts/: sign_order.py
src/: bot_state.rs  data_collection_task.rs  data_collector.rs  data_loader.rs  error.rs  fill_handler_task.rs  garch.rs  k_estimator.rs  lib.rs  market_maker.rs  order_manager_task.rs  pnl_tracker_task.rs  rest.rs  rest_backup_task.rs  signature.rs  spread_calculator_task.rs  types.rs  websocket.rs
src/snip12/: domain.rs  hash.rs  mod.rs  signing.rs  tests.rs
